force-app/main/default/objects/Policy_Nominee__c/Policy_Nominee__c.object-meta.xml
<CustomObject>
    <description>ABHIL</description>
    <label>Policy Nominee</label>
    <nameField>
        <label>Nominee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Nominees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>