force-app/main/default/objects/Policy_Nominee__c/fields/Nominee_Id__c.field-meta.xml
<CustomField>
    <fullName>Nominee_Id__c</fullName>
    <displayFormat>NM-{0000}</displayFormat>
    <label>Search Nominee</label>
    <type>AutoNumber</type>
</CustomField>