force-app/main/default/objects/Policy_Nominee__c/fields/NomineeContactNumber__c.field-meta.xml
<CustomField>
    <fullName>NomineeContactNumber__c</fullName>
    <description>ABHI</description>
    <label>Nominee Contact Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>