force-app/main/default/objects/Policy_Nominee__c/fields/NomineeDOB__c.field-meta.xml
<CustomField>
    <fullName>NomineeDOB__c</fullName>
    <description>ABHI</description>
    <label>Nominee DOB</label>
    <type>Date</type>
</CustomField>