force-app/main/default/objects/Policy_Nominee__c/fields/NomineeExternalId__c.field-meta.xml
<CustomField>
    <fullName>NomineeExternalId__c</fullName>
    <externalId>true</externalId>
    <label>NomineeExternalId</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>