force-app/main/default/objects/Policy_Nominee__c/fields/NomineePercentage__c.field-meta.xml
<CustomField>
    <fullName>NomineePercentage__c</fullName>
    <description>ABHI</description>
    <label>Nominee Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>