force-app/main/default/objects/Policy_Nominee__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Number</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Policy Nominees</relationshipLabel>
    <relationshipName>PolicyNumber</relationshipName>
    <type>Lookup</type>
</CustomField>