force-app/main/default/objects/Policy_Nominee__c/fields/Policy_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number_Text__c</fullName>
    <externalId>true</externalId>
    <label>Policy Number Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>